--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:38:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:39:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
       <td>Cameron Smith(W) -2
 +2 thru 4</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch -1
@@ -153,6 +153,70 @@ body {
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Tony Finau -2
+-1 thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td class="greyout leftborder">Shane Lowry +1
+E thru 5</td>
+      <td class="greyout">Justin Thomas(W) +3
+-1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -3
+E thru 2</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td class="greyout leftborder">Russell Henley +3
++2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Xander Schauffele(W) +6
 +4 thru 13</td>
     </tr>
     <tr>
@@ -172,84 +236,68 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Tony Finau -2
--1 thru 2</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Will Zalatoris E
+      <td>Matthew Fitzpatrick E
++1 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Dustin Johnson -2
++1 thru 15</td>
+      <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
-E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +3
+      <td>Adam Scott +1
 -1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +3
+E thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
       <td>Cameron Smith -2
 +2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Tyrrell Hatton E
-E thru 15</td>
+      <td>Tyrrell Hatton +1
++1 thru 16</td>
       <td class="greyout leftborder">Viktor Hovland(W) +3
 +3 thru 13</td>
       <td class="greyout">Sam Burns +5
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">Team Steve</td>
       <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
       <td>Cameron Smith(W) -2
 +2 thru 4</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td class="greyout leftborder">Russell Henley +3
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
+      <td>Shane Lowry +1
+E thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout">Xander Schauffele(W) +6
-+4 thru 13</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -268,34 +316,18 @@ E thru 12</td>
 E thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -2
-+2 thru 4</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
+      <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-4</td>
-      <td>Dustin Johnson -2
-+1 thru 15</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Webb Simpson E
++1 thru 17</td>
+      <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Adam Scott +1
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +3
-E thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -316,42 +348,10 @@ E thru 12</td>
 +3 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -2
-+2 thru 4</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Shane Lowry +1
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Webb Simpson E
-+1 thru 17</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
       <td>Patrick Cantlay(W) -1
 +1 thru 14</td>
       <td>Corey Conners -1
@@ -365,9 +365,9 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -3
+E thru 2</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
       <td>Corey Conners -1
@@ -378,6 +378,54 @@ E thru 12</td>
 +1 (F)</td>
       <td class="greyout">Rory McIlroy +4
 +3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+E thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 16</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+E thru 2</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Billy Horschel +4
++2 thru 15</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -426,54 +474,6 @@ Missed Cut</td>
 E thru 12</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -2
-+2 thru 4</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 16</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Billy Horschel +4
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -636,6 +636,38 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry +1
+E thru 5</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +4
++2 thru 13</td>
+      <td class="greyout">Sam Burns +5
++2 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -648,22 +680,6 @@ E thru 12</td>
 +3 thru 13</td>
       <td class="greyout leftborder">Rory McIlroy(W) +4
 +3 thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry +1
-E thru 5</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
     </tr>
@@ -700,22 +716,6 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +4
-+2 thru 13</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">1</td>
       <td>Cameron Smith -2
@@ -728,6 +728,38 @@ E thru 12</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Rory McIlroy(W) +4
 +3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -764,22 +796,6 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">3</td>
       <td>Patrick Cantlay -1
@@ -792,22 +808,6 @@ E thru 12</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -844,6 +844,38 @@ E thru 12</td>
 +3 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">3</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 13</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">4</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">4</td>
       <td>Collin Morikawa E
@@ -860,20 +892,20 @@ E thru 12</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">4</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +6
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -884,22 +916,6 @@ Missed Cut</td>
 -1 thru 15</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">5</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td class="greyout leftborder">Jordan Spieth +4
@@ -922,22 +938,6 @@ E thru 12</td>
 +3 thru 12</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">5</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
