--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:38:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:39:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
       <td>Tony Finau -2
 -1 thru 2</td>
       <td>Patrick Cantlay -1
@@ -154,6 +154,22 @@ body {
 E thru 5</td>
       <td class="greyout">Justin Thomas(W) +3
 -1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -3
+E thru 2</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 16</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -204,36 +220,20 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -1
+      <td>Scottie Scheffler(W) -3
+E thru 2</td>
+      <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Tyrrell Hatton E
-E thru 15</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +3
--1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +4
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 16</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -268,20 +268,20 @@ E thru 5</td>
 E thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 14</td>
+      <td>Corey Conners -1
++1 (F)</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Shane Lowry +1
+      <td>Tyrrell Hatton +1
++1 thru 16</td>
+      <td class="greyout leftborder">Shane Lowry +1
 E thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
+      <td class="greyout">Justin Thomas(W) +3
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
