--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:03:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:03:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ body {
 +1 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td class="greyout leftborder">Shane Lowry +1
-E thru 6</td>
+      <td class="greyout leftborder">Shane Lowry E
+-1 thru 7</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -212,12 +212,44 @@ Missed Cut</td>
 +1 thru 3</td>
       <td>Patrick Cantlay -1
 +1 thru 15</td>
-      <td>Will Zalatoris E
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td class="greyout leftborder">Will Zalatoris E
 +1 thru 15</td>
-      <td class="greyout leftborder">Shane Lowry +1
-E thru 6</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -2
++2 thru 5</td>
+      <td>Scottie Scheffler -2
++1 thru 3</td>
+      <td>Patrick Cantlay -1
++1 thru 15</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -2
++2 thru 5</td>
+      <td>Hideki Matsuyama -2
+-2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 15</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -300,36 +332,20 @@ E thru 6</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -2
-+2 thru 5</td>
-      <td>Scottie Scheffler -2
-+1 thru 3</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Brooks Koepka +4
+      <td>Dustin Johnson(W) -2
++1 thru 16</td>
+      <td>Tony Finau -2
+-1 thru 3</td>
+      <td>Matthew Fitzpatrick E
 +1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -2
-+2 thru 5</td>
-      <td>Hideki Matsuyama -2
--2 thru 4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 15</td>
-      <td class="greyout">Viktor Hovland +4
-+4 thru 14</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -412,22 +428,6 @@ Out With Injury</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson(W) -2
-+1 thru 16</td>
-      <td>Tony Finau -2
--1 thru 3</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 14</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
       <td>Tony Finau -2
@@ -490,6 +490,22 @@ Missed Cut</td>
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
++2 thru 5</td>
+      <td>Matthew Fitzpatrick E
++1 thru 14</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Will Zalatoris E
++1 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -556,18 +572,34 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -2
++1 thru 3</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 14</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
 +2 thru 5</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 14</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 15</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Justin Thomas(W) +2
 -2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 14</td>
     </tr>
@@ -620,38 +652,6 @@ E thru 6</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -2
-+1 thru 3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td>Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 14</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -2
-+2 thru 5</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td>Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -2
@@ -666,6 +666,22 @@ E thru 6</td>
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">0</td>
+      <td>Joaquin Niemann -2
++1 thru 5</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry(W) E
+-1 thru 7</td>
+      <td>Brian Harman +3
++1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Sam Burns +6
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -714,22 +730,6 @@ E thru 6</td>
 +4 thru 14</td>
       <td class="greyout">Xander Schauffele(W) +6
 +4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">1</td>
-      <td>Joaquin Niemann -2
-+1 thru 5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry(W) +1
-E thru 6</td>
-      <td>Brian Harman +3
-+1 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
