--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:03:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:03:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ body {
 +1 thru 15</td>
       <td>Will Zalatoris E
 +1 thru 15</td>
-      <td class="greyout leftborder">Shane Lowry +1
-E thru 6</td>
+      <td class="greyout leftborder">Shane Lowry E
+-1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 4</td>
     </tr>
@@ -204,6 +204,38 @@ E thru 6</td>
 +1 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
++2 thru 5</td>
+      <td>Matthew Fitzpatrick E
++1 thru 14</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Will Zalatoris E
++1 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -1
++1 thru 15</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -2
@@ -218,6 +250,22 @@ E thru 6</td>
 +4 thru 14</td>
       <td class="greyout">Sam Burns +6
 +3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 3</td>
+      <td>Will Zalatoris E
++1 thru 15</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 14</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -250,54 +298,6 @@ E thru 6</td>
 +2 thru 14</td>
       <td class="greyout">Viktor Hovland +4
 +4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -2
-+2 thru 5</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 14</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout">Tyrrell Hatton +2
-+2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 3</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td>Shane Lowry +1
-E thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 14</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
